# ossvet

./: .gitignore  LEARNING_GUIDE.md  LICENSE  README.md  pyproject.toml
docs/: COMPETITIVE_LANDSCAPE.md  ROADMAP.md
ossvet/: clone.py  config.py  github_api.py  main.py  models.py  reporting.py  scoring.py
ossvet/data/: popular_npm.json  popular_pypi.json
ossvet/scanners/: __init__.py  base.py  dependency_hygiene.py  gitleaks.py  grype.py  modelscan.py  patterns.py  provenance.py  risky_files.py  scorecard.py  semgrep.py  syft.py  unicode_trojan.py
tests/: conftest.py  test_dependency_hygiene.py  test_e2e_clean.py  test_e2e_malicious.py  test_graceful_degradation.py  test_patterns.py  test_reporting.py  test_risky_files.py  test_scoring.py  test_unicode_trojan.py
tests/fixtures/clean_repo/: README.md  setup.py
tests/fixtures/clean_repo/cleanpkg/: __init__.py
tests/fixtures/malicious_repo/: README.md  evil.py  package.json  requirements.txt  setup.py
