[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ossvet"
version = "0.1.0"
description = "Decide whether an open-source GitHub repo is safe to inspect, install, or run."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "ossvet contributors" }]
keywords = ["security", "supply-chain", "sbom", "static-analysis", "oss"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.6",
    "httpx>=0.27",
    "rapidfuzz>=3.6",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
ossvet = "ossvet.main:app"

[project.urls]
Homepage = "https://github.com/ossvet/ossvet"
Issues = "https://github.com/ossvet/ossvet/issues"

[tool.hatch.build.targets.wheel]
packages = ["ossvet"]

[tool.hatch.build.targets.wheel.force-include]
"ossvet/data" = "ossvet/data"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "N"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
files = ["ossvet"]

[[tool.mypy.overrides]]
module = ["rapidfuzz.*", "yaml.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
